# agrpc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: agrpc-ci.yml
agrpc/: .clang-format  CMakeLists.txt
agrpc/base/: CMakeLists.txt  align.h  chrono.cc  chrono.h  chrono_test.cc  likely.h  logging.cc  logging.h  logging_benchmark.cc  logging_test.cc
agrpc/base/internal/: CMakeLists.txt  macros.h
agrpc/context/: CMakeLists.txt  grpc_context.cc  grpc_context.h  rpcs.h
agrpc/example/: CMakeLists.txt  client.cc  server.cc
agrpc/example/hellostreamingworld/: CMakeLists.txt  client.cc  server.cc
agrpc/example/helloworld/: CMakeLists.txt  client.cc  server.cc
agrpc/example/proto/: CMakeLists.txt  hellostreamingworld.proto
agrpc/proto/: CMakeLists.txt
cmake/: agrpc_add_all_subdirs.cmake  agrpc_cc_binary.cmake  agrpc_cc_library.cmake  agrpc_cc_proto_library.cmake  agrpc_cc_test.cmake  agrpc_copts.cmake  agrpc_installed_test.cmake  agrpc_macros.cmake  third_party.cmake
